links section adaptive & head edits

--- a/page.html
+++ b/page.html
@@ -25,7 +25,7 @@
     <main>
         <!-- Head -->
         <div class="page-head">
-            <div class="page-head__hero">
+            <div class="page-hero-paddings page-head__hero">
                 <div class="page-head__thumbnail">
                     <div class="page-head__photo">
                         <img src="./assets/photo.png" alt="photo">
@@ -205,30 +205,38 @@
             </div>
         </div>
         <!-- Links -->
-        <div class="page-links" style="display: none;">
-            <div class="page-links__hero">
+        <div class="page-links">
+            <div class="page-hero-paddings page-links__hero">
                 <h3 class="title page-links__title">Links</h3>
                 <div class="page-links__list">
-                    <a href="" class="page-links__item">
-                        <span class="page-links__name">Wolfgang in wikipedia</span>
-                        <span class="page-links__link">instagram.com/sydorov.alex/</span>
-                        <span class="page-links__hover">Open link</span>
-                    </a>
-                    <a href="" class="page-links__item">
-                        <span class="page-links__name">Wolfgang in wikipedia</span>
-                        <span class="page-links__link">instagram.com/sydorov.alex/</span>
-                        <span class="page-links__hover">Open link</span>
-                    </a>
-                    <a href="" class="page-links__item">
-                        <span class="page-links__name">Wolfgang in wikipedia</span>
-                        <span class="page-links__link">instagram.com/sydorov.alex/</span>
-                        <span class="page-links__hover">Open link</span>
-                    </a>
-                    <a href="" class="page-links__item">
-                        <span class="page-links__name">Wolfgang in wikipedia</span>
-                        <span class="page-links__link">instagram.com/sydorov.alex/</span>
-                        <span class="page-links__hover">Open link</span>
-                    </a>
+                    <div class="page-links__item-wrapper">
+                        <a href="" class="page-links__item">
+                            <span class="page-links__name">Wolfgang in wikipedia</span>
+                            <span class="page-links__link">instagram.com/sydorov.alex/</span>
+                            <span class="page-links__hover">Open link</span>
+                        </a>
+                    </div>
+                    <div class="page-links__item-wrapper">
+                        <a href="" class="page-links__item">
+                            <span class="page-links__name">Wolfgang in wikipedia</span>
+                            <span class="page-links__link">instagram.com/sydorov.alex/</span>
+                            <span class="page-links__hover">Open link</span>
+                        </a>
+                    </div>
+                    <div class="page-links__item-wrapper">
+                        <a href="" class="page-links__item">
+                            <span class="page-links__name">Wolfgang in wikipedia</span>
+                            <span class="page-links__link">instagram.com/sydorov.alex/</span>
+                            <span class="page-links__hover">Open link</span>
+                        </a>
+                    </div>
+                    <div class="page-links__item-wrapper">
+                        <a href="" class="page-links__item">
+                            <span class="page-links__name">Wolfgang in wikipedia</span>
+                            <span class="page-links__link">instagram.com/sydorov.alex/</span>
+                            <span class="page-links__hover">Open link</span>
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
