page rested adaptive

--- a/page.html
+++ b/page.html
@@ -241,11 +241,13 @@
             </div>
         </div>
         <!-- Where is rested -->
-        <div class="page-rested" style="display: none;">
-            <div class="page-rested__hero">
+        <div class="page-rested">
+            <div class="page-hero-paddings page-rested__hero">
                 <h3 class="page-rested__title">Where is rested</h3>
                 <div class="page-rested__wrapper">
-                    <img src="./assets/page-map.png" alt="map" class="page-rested__map">
+                     <div class="page-rested__map-wrapper">
+                         <img src="./assets/page-map.png" alt="map" class="page-rested__map">
+                     </div>
                     <div class="page-rested__content">
                         <h3 class="title page-rested__subtitle">Neuer Friedhof Rostock 37 row, 4 section</h3>
                         <div class="page-rested__adress">
