page media section adaptive

--- a/page.html
+++ b/page.html
@@ -148,8 +148,8 @@
             </div>
         </div>
         <!-- Media -->
-        <div class="page-media" style="display: none;">
-            <div class="page-media__hero">
+        <div class="page-media">
+            <div class="page-hero-paddings page-media__hero">
                 <h3 class="title page-media__title">Media files</h3>
                 <h4 class="page-media__subtitle">Photo</h4>
                 <div class="page-media__list">
@@ -173,6 +173,62 @@
                 </div>
                 <h4 class="page-media__subtitle">Video</h4>
                 <div class="page-media__list">
+                    <figure class="page-media__video">
+                        <div class="page-media__item">
+                            <img src="./assets/page-media/3.png" alt="video">
+                        </div>
+                        <figcaption>Holliday in the Berlin</figcaption>
+                    </figure>
+                    <figure class="page-media__video">
+                        <div class="page-media__item">
+                            <img src="./assets/page-media/1.png" alt="video">
+                        </div>
+                        <figcaption>Summer in Rostock</figcaption>
+                    </figure>
+                    <figure class="page-media__video">
+                        <div class="page-media__item">
+                            <img src="./assets/page-media/3.png" alt="video">
+                        </div>
+                        <figcaption>Holliday in the Berlin</figcaption>
+                    </figure>
+                    <figure class="page-media__video">
+                        <div class="page-media__video-item">
+                            <img src="./assets/page-media/2.png" alt="video">
+                            <div class="page-media__more">
+                                <div>
+                                    <span>32</span>more
+                                </div>
+                            </div>
+                        </div>
+                    </figure>
+                </div>
+            </div>
+            <div class="page-media__mobile-hero">
+                <div class="page-hero-paddings">
+                    <h3 class="title page-media__title">Media files</h3>
+                    <h4 class="page-media__subtitle">Photo</h4>
+                </div>
+                <div class="owl-carousel page-media__list media-mobile-carousel">
+                    <div class="page-media__item page-media__photo">
+                        <img src="./assets/page-media/1.png" alt="photo">
+                    </div>
+                    <div class="page-media__item page-media__photo">
+                        <img src="./assets/page-media/2.png" alt="photo">
+                    </div>
+                    <div class="page-media__item page-media__photo">
+                        <img src="./assets/page-media/3.png" alt="photo">
+                    </div>
+                    <div class="page-media__photo">
+                        <img src="./assets/page-media/1.png" alt="photo">
+                        <div class="page-media__more">
+                            <div>
+                                <span>32</span>more
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <h4 class="page-hero-paddings page-media__subtitle">Video</h4>
+                <div class="owl-carousel page-media__list media-mobile-carousel">
                     <figure class="page-media__video">
                         <div class="page-media__item">
                             <img src="./assets/page-media/3.png" alt="video">
