bibliography section adaptive

--- a/page.html
+++ b/page.html
@@ -60,10 +60,10 @@
             </div>
         </div>
         <!-- Biography -->
-        <div class="page-biography" style="display: none;">
-            <div class="container page-biography__main">
+        <div class="page-biography">
+            <div class="page-hero-paddings page-biography__main">
                 <div class="title page-biography__title">Biography</div>
-                <p class="text">
+                <p class="text page-biography__main-text">
                     God Bless' on every step going upstairs to bed. I did this every day for the best part of a year and Mum always replied without even a hint of irritation as she knew how important it was to me, although I am sure she was happy when I grew out of that phase !God Bless' on every step going upstairs to bed. I did this every day for the best part of a year and Mum always replied without even a hint of irritation as she knew how important it was to me, although I am sure she was happy when I grew out of that phase!
                     <br><br>
                     God Bless' on every step going upstairs to bed. I did this every day for the best part of a year and Mum always replied without even a hint of irritation as she knew how important it was to me, although I am sure she was happy when I grew out of that phase !God Bless' on every step going upstairs to bed. I did this every day for the best part of a year and Mum always replied without even a hint of irritation as she knew how important it was to me, although I am sure she was happy when I grew out of that phase !
@@ -97,7 +97,7 @@
                     </button>
                 </div>
             </div>
-            <div class="page-biography__friends">
+            <div class="page-hero-paddings page-biography__friends">
                 <h3 class="title page-biography__title">Words of related and friends</h3>
                 <div class="page-biography__hero">
                     <div class="page-biography__content">
