created url theme param

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                                 </div>
                             </label>
                         </div>
-                        <input checked id="template-radio-1" type="radio" name="template-radio" class="creation-template__radio">
+                        <input checked id="template-radio-1" type="radio" name="template-radio" class="creation-template__radio" value="classic">
                         <label for="template-radio-1" class="text creation-template__name">Класичний</label>
                     </div>
                     <div class="creation-template__item">
@@ -95,7 +95,7 @@
                                 </div>
                             </label>
                         </div>
-                        <input type="radio" id="template-radio-2" name="template-radio" class="creation-template__radio">
+                        <input type="radio" id="template-radio-2" name="template-radio" class="creation-template__radio" value="black">
                         <label for="template-radio-2" class="text creation-template__name">Чорний</label>
                     </div>
                     <div class="creation-template__item">
@@ -110,7 +110,7 @@
                                 </div>
                             </label>
                         </div>
-                        <input id="template-radio-3" type="radio" name="template-radio" class="creation-template__radio">
+                        <input id="template-radio-3" type="radio" name="template-radio" class="creation-template__radio" value="red">
                         <label for="template-radio-3" class="text creation-template__name">Червоний</label>
                     </div>
                     <div class="creation-template__item">
@@ -125,7 +125,7 @@
                                 </div>
                             </label>
                         </div>
-                        <input id="template-radio-4" type="radio" name="template-radio" class="creation-template__radio">
+                        <input id="template-radio-4" type="radio" name="template-radio" class="creation-template__radio" value="blue">
                         <label for="template-radio-4" class="text creation-template__name">Блакитний</label>
                     </div>
                 </div>
@@ -359,8 +359,8 @@
             </section>
 
             <div class="creation-page__btns">
-                <button class="btn btn-with-icon">Передпрогляд</button>
-                <button class="btn creation-page__publish">Опублікувати</button>
+                <button class="btn btn-with-icon preview-btn">Передпрогляд</button>
+                <button class="btn creation-page__publish preview-btn">Опублікувати</button>
             </div>
         </div>
     </main>
