color themes, head color and head animations

--- a/page.html
+++ b/page.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./style/owl.carousel.min.css">
     <title>Inheart</title>
 </head>
-<body class="bg-light-blue">
+<body>
     <header class="header-info">
         <div class="header-info__wrapper">
             <img src="./assets/logo/logo-classic.svg" alt="Inheart" class="header-info__logo logo-classic">
