--- a/page.html
+++ b/page.html
@@ -114,7 +114,9 @@
                             </div>
                         </div>
                         <div class="page-biography__item mb-0">
-                            <img src="./assets/from-parents-and-friends.png" alt="photo">
+                            <div class="page-biography__img-wrapper">
+                                <img src="./assets/from-parents-and-friends.png" alt="photo">
+                            </div>
                             <p>
                                 When I went through a very anxious phase as a child, I got it  
                                 God Bless' on every step going upstairs to bed. I did this every day for the best part of a year and Mum always replied without even a hint of irritation as she knew how important it was to me, although I am sure she was happy when I grew out of that phase !
@@ -136,7 +138,9 @@
                             </div>
                         </div>
                         <div class="page-biography__item mb-0">
-                            <img src="./assets/from-parents-and-friends.png" alt="photo">
+                            <div class="page-biography__img-wrapper">
+                                <img src="./assets/from-parents-and-friends.png" alt="photo">
+                            </div>
                             <p>
                                 When I went through a very anxious phase as a child, I got it  
                                 God Bless' on every step going upstairs to bed. I did this every day for the best part of a year and Mum always replied without even a hint of irritation as she knew how important it was to me, although I am sure she was happy when I grew out of that phase !
