--- a/page.html
+++ b/page.html
@@ -333,7 +333,7 @@
         </div>
     </main>
 
-    <footer class="footer">
+    <footer class="footer footer-fixed">
         <div class="footer__wrapper">
             <div class="footer__hero">
                 <nav class="footer__nav">
