read more accordeon added

--- a/page.html
+++ b/page.html
@@ -108,10 +108,10 @@
                 <div class="page-biography__hero">
                     <div class="page-biography__content">
                         <div class="page-biography__item">
-                            <p>
+                            <div class="page-biography__text">
                                 When I went through a very anxious phase as a child, I got it  
                                 God Bless' on every step going upstairs to bed. I did this every day for the best part of a year and Mum always replied without even a hint of irritation as she knew how important it was to me, although I am sure she was happy when I grew out of that phase !
-                            </p>
+                            </div>
                             <div class="page-biography__author">
                                 Mike Wazowsky <span>11th Dec 2022</span>
                             </div>
@@ -120,10 +120,10 @@
                             <div class="page-biography__img-wrapper">
                                 <img src="./assets/from-parents-and-friends.png" alt="photo">
                             </div>
-                            <p>
+                            <div class="page-biography__text">
                                 When I went through a very anxious phase as a child, I got it  
                                 God Bless' on every step going upstairs to bed. I did this every day for the best part of a year and Mum always replied without even a hint of irritation as she knew how important it was to me, although I am sure she was happy when I grew out of that phase !
-                            </p>
+                            </div>
                             <div class="page-biography__author">
                                 Mike Wazowsky <span>11th Dec 2022</span>
                             </div>
@@ -131,11 +131,17 @@
                     </div>
                     <div class="page-biography__content">
                         <div class="page-biography__item">
-                            <p>
+                            <div class="page-biography__text">
                                 Ben I went through a very anxious phase as a child, I got it  
                                 God Bless' on every step going upstairs to bed. I did this every day for the best part of a year and Mum always replied without even a hint of irritation as she knew how important it was to me.
-                                <span class="read-more">Read more...</span>
-                            </p>
+                                <div class="read-more">
+                                    <span>Read more...</span>
+                                    <p class="page-biography__text">
+                                        Ben I went through a very anxious phase as a child, I got it  
+                                        God Bless' on every step going upstairs to bed. I did this every day for the best part of a year and Mum always replied without even a hint of irritation as she knew how important it was to me.
+                                    </p>
+                                </div>
+                            </div>
                             <div class="page-biography__author">
                                 Mike Wazowsky <span>11th Dec 2022</span>
                             </div>
@@ -144,10 +150,10 @@
                             <div class="page-biography__img-wrapper">
                                 <img src="./assets/from-parents-and-friends.png" alt="photo">
                             </div>
-                            <p>
+                            <div class="page-biography__text">
                                 When I went through a very anxious phase as a child, I got it  
                                 God Bless' on every step going upstairs to bed. I did this every day for the best part of a year and Mum always replied without even a hint of irritation as she knew how important it was to me, although I am sure she was happy when I grew out of that phase !
-                            </p>
+                            </div>
                             <div class="page-biography__author">
                                 Mike Wazowsky <span>11th Dec 2022</span>
                             </div>
