--- a/page.html
+++ b/page.html
@@ -76,7 +76,7 @@
                 </p>
             </div>
             <div class="page-biography__carousel-wrap">
-                <div class="page-biography__carousel owl-carousel">
+                <div class="anim-item page-biography__carousel owl-carousel">
                     <div class="page-biography__carousel-item">
                         <img src="./assets/page-carousel/1.png" alt="1">
                     </div>
@@ -164,7 +164,7 @@
             </div>
         </div>
         <!-- Media -->
-        <div class="page-media">
+        <div class="page-media anim-item">
             <div class="page-hero-paddings page-media__hero">
                 <h3 class="title page-media__title">Media files</h3>
                 <h4 class="text page-media__subtitle">Photo</h4>
@@ -408,5 +408,6 @@
     <script src="./script/jquery.slim.js"></script>
     <script src="./script/owl.carousel.min.js"></script>
     <script src="./script/main-page.js"></script>
+    <script src="./script/scrollAnimation.js"></script>
 </body>
 </html>
