btns clones items

--- a/index.html
+++ b/index.html
@@ -262,13 +262,17 @@
                     Додайте посилання на соціальні мережі, блоги, згадки у ЗМІ та іншу інформацію про людину, яка зберігається в інтернеті
                 </p>
                 <p class="creation-refs__ads-text">Доступно лише у пакетах “Оптимальний” та “Розширений”</p>
-                <div class="input__wrapper">
-                    <label class="label">Посилання</label>
-                    <input type="text" class="input" placeholder="Посилання">
-                </div>
-                <div class="input__wrapper mb-0">
-                    <label class="label">Назва посилання</label>
-                    <input type="text" class="input" placeholder="Назва посилання">
+                <div class="creation-refs__wrapper">
+                    <div class="creation-refs__parent">
+                        <div class="input__wrapper">
+                            <label class="label">Посилання</label>
+                            <input type="text" class="input" placeholder="Посилання">
+                        </div>
+                        <div class="input__wrapper mb-0">
+                            <label class="label">Назва посилання</label>
+                            <input type="text" class="input" placeholder="Назва посилання">
+                        </div>
+                    </div>
                 </div>
                 <button class="btn btn-with-icon creation-refs__btn">
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -332,17 +336,21 @@
                 <p class="text creation-memories__text">
                     Напишіть спогад про померлого. Також ви можете додати спогади друзів. Для цього вам потрібно буде надіслати їм посилання на Сторінку пам'яті
                 </p>
-                <div class="input__wrapper">
-                    <label class="label">Спогад</label>
-                    <textarea cols="30" rows="10" class="input" placeholder="Спогад"></textarea>
-                </div>
-                <div class="creation-memories__add-text">
-                    <img src="./assets/icons/plus.svg" alt="+">
-                    <span>Додати фото чи відео</span>
-                </div>
-                <div class="input__wrapper mb-0">
-                    <label class="label">Ім'я автора</label>
-                    <input type="text" class="input" placeholder="Ім'я автора">
+                <div class="creation-memories__wrapper">
+                    <div class="creation-memories__parent">
+                        <div class="input__wrapper">
+                            <label class="label">Спогад</label>
+                            <textarea cols="30" rows="10" class="input" placeholder="Спогад"></textarea>
+                        </div>
+                        <div class="creation-memories__add-text">
+                            <img src="./assets/icons/plus.svg" alt="+">
+                            <span>Додати фото чи відео</span>
+                        </div>
+                        <div class="input__wrapper mb-0">
+                            <label class="label">Ім'я автора</label>
+                            <input type="text" class="input" placeholder="Ім'я автора">
+                        </div>
+                    </div>
                 </div>
                 <button class="btn btn-with-icon creation-memories__btn">
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
