--- a/page.html
+++ b/page.html
@@ -37,6 +37,7 @@
                         <img src="./assets/photo.png" alt="photo">
                     </div>
                     <div class="page-head__thumbnail-label">In memory of</div>
+                    <div class="page-head__frame"></div>
                 </div>
                 <div class="page-head__name-wrapper">
                     <p class="page-head__name">Wolfgang Iohan</p>
@@ -54,20 +55,22 @@
                         </div>
                     </div>
                 </div>
-                <svg class="page-head__quots" width="20" height="17" viewBox="0 0 20 17" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M7.68859 11.36C7.68859 12.9933 7.33859 14.23 6.63859 15.07C5.98526 15.91 5.09859 16.33 3.97859 16.33C2.81193 16.33 1.87859 15.91 1.17859 15.07C0.478594 14.23 0.128594 13.0867 0.128594 11.64C0.128594 6.6 3.11526 2.84333 9.08859 0.369996L9.29859 0.719996C6.17193 2.68 4.60859 5.22333 4.60859 8.35C4.60859 10.2167 5.63526 11.22 7.68859 11.36ZM17.6286 11.36C17.6286 12.9933 17.2786 14.23 16.5786 15.07C15.9253 15.91 15.0386 16.33 13.9186 16.33C12.7519 16.33 11.8186 15.91 11.1186 15.07C10.4653 14.23 10.1386 13.0867 10.1386 11.64C10.1386 6.6 13.1019 2.84333 19.0286 0.369996L19.2386 0.719996C16.1119 2.68 14.5486 5.22333 14.5486 8.35C14.5486 10.2167 15.5753 11.22 17.6286 11.36Z" fill="#C3DAE2"/>
-                </svg>                    
-                <p class="page-head__text">
+                <div class="anim-item page-head__quots-wrap">
+                    <svg class="page-head__quots" width="20" height="17" viewBox="0 0 20 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M7.68859 11.36C7.68859 12.9933 7.33859 14.23 6.63859 15.07C5.98526 15.91 5.09859 16.33 3.97859 16.33C2.81193 16.33 1.87859 15.91 1.17859 15.07C0.478594 14.23 0.128594 13.0867 0.128594 11.64C0.128594 6.6 3.11526 2.84333 9.08859 0.369996L9.29859 0.719996C6.17193 2.68 4.60859 5.22333 4.60859 8.35C4.60859 10.2167 5.63526 11.22 7.68859 11.36ZM17.6286 11.36C17.6286 12.9933 17.2786 14.23 16.5786 15.07C15.9253 15.91 15.0386 16.33 13.9186 16.33C12.7519 16.33 11.8186 15.91 11.1186 15.07C10.4653 14.23 10.1386 13.0867 10.1386 11.64C10.1386 6.6 13.1019 2.84333 19.0286 0.369996L19.2386 0.719996C16.1119 2.68 14.5486 5.22333 14.5486 8.35C14.5486 10.2167 15.5753 11.22 17.6286 11.36Z" fill="#C3DAE2"/>
+                    </svg>                    
+                </div>
+                <p class="page-head__text anim-item">
                     When I went through a very anxious phase as a child, I got it into my head that everything woukd be alright if I repeated'Goodnight,
                     <br>
                     God Bless' on every step going upstairs to bed. I did this every day for the best part of a year and Mum always replied without even a hint of irritation as she knew how important it was to me, although I am sure she was happy when I grew out of that phase !
                 </p>
-                <p class="page-head__author">Mike Wazowsky</p>
+                <p class="page-head__author anim-item">Mike Wazowsky</p>
             </div>
         </div>
         <!-- Biography -->
         <div class="page-biography">
-            <div class="page-hero-paddings page-biography__main">
+            <div class="page-hero-paddings page-biography__main anim-item">
                 <div class="title page-biography__title">Biography</div>
                 <p class="text page-biography__main-text">
                     God Bless' on every step going upstairs to bed. I did this every day for the best part of a year and Mum always replied without even a hint of irritation as she knew how important it was to me, although I am sure she was happy when I grew out of that phase !God Bless' on every step going upstairs to bed. I did this every day for the best part of a year and Mum always replied without even a hint of irritation as she knew how important it was to me, although I am sure she was happy when I grew out of that phase!
