--- a/page.html
+++ b/page.html
@@ -40,14 +40,20 @@
                     <div class="page-head__frame"></div>
                 </div>
                 <div class="page-head__name-wrapper">
-                    <p class="page-head__name">Wolfgang Iohan</p>
+                    <div class="page-head__name-container">
+                        <p class="page-head__name">Wolfgang Iohan</p>
+                    </div>
                     <p class="page-head__date-wrap">
                         <span class="page-head__date page-head__date-birth">11th Dec 1921</span>
-                        <span class="page-head__name page-head__surname">Becker</span>
+                        <span class="page-head__name-container">
+                            <span class="page-head__name page-head__surname">Becker</span>
+                        </span>
                         <span class="page-head__date page-head__date-death">11th Dec 1972</span>
                     </p>
                     <div class="page-head__date-wrap-mobile">
-                        <p class="page-head__name page-head__surname">Becker</p>
+                        <div class="page-head__name-container">
+                            <p class="page-head__name page-head__surname">Becker</p>
+                        </div>
                         <div>
                             <span class="page-head__date">11th Dec 1921</span>
                             <span class="page-head__date page-head__date-dash">-</span>
