remove biograp carousel btns

--- a/page.html
+++ b/page.html
@@ -99,7 +99,7 @@
                         <img src="./assets/page-carousel/4.png" alt="1">
                     </div>
                 </div>
-                <div class="page-biography__controls">
+                <!-- <div class="page-biography__controls">
                     <button class="page-biography__carousel-btn biography-left-btn">
                         <svg width="8" height="12" viewBox="0 0 8 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M6.76222 0.385486L1.33594 5.81177L6.76222 11.238" stroke="#131414"/>
@@ -110,7 +110,7 @@
                             <path d="M1.23778 11.6145L6.66406 6.18823L1.23778 0.76195" stroke="#131414"/>
                         </svg>                            
                     </button>
-                </div>
+                </div> -->
             </div>
             <div class="page-hero-paddings page-biography__friends">
                 <h3 class="title page-biography__title">Words of related and friends</h3>
